--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 -i https://pypi.org/simple
 alembic==1.4.3
 click==7.1.2
-dnspython==2.1.0; python_version >= '3.6'
+dnspython==2.1.0
 email-validator==1.1.2
 faker==8.1.0
 flask-cors==3.0.8
@@ -19,7 +19,7 @@ flask-sqlalchemy==2.4.4
 flask-wtf==0.14.3
 flask==1.1.2
 gunicorn==20.0.4
-idna==3.1; python_version >= '3.4'
+idna==3.1
 itsdangerous==1.1.0
 jinja2==2.11.3
 mako==1.1.3
